--- a/web/static/templates/index.html
+++ b/web/static/templates/index.html
@@ -16,7 +16,7 @@
             </nav>
             <div class="github-section">
                 <p>If you find this tool useful, please consider starring our repository: </p>
-                <a href="https://github.com/your-repo" class="github-button">
+                <a href="https://github.com/gosom/google-maps-scraper" class="github-button">
                 <svg height="16" width="16" viewBox="0 0 16 16">
                     <path fill="currentColor" d="M8 .25a.75.75 0 0 1 .673.418l1.882 3.815 4.21.612a.75.75 0 0 1 .416 1.279l-3.046 2.97.719 4.192a.75.75 0 0 1-1.088.791L8 12.347l-3.766 1.98a.75.75 0 0 1-1.088-.79l.72-4.194L.818 6.374a.75.75 0 0 1 .416-1.28l4.21-.611L7.327.668A.75.75 0 0 1 8 .25z"/>
                   </svg>
